<resources>
    <string name="app_name">Baojili</string>
    <string name="loading">Loading..</string>

    <string name="please_grant_call_permission_in_settings">Please enable the call permission in the settings to use this function.</string>
    <string name="please_grant_location_permission_in_settings">Please enable the location permission in the settings to use this function.</string>
    <string name="please_grant_camera_permission_in_settings">Please enable the camera permission in the settings to use this function.</string>
    <string name="please_grant_external_storage_permission_in_settings">Please enable the external storage permission in the settings to use this function.</string>

    <string name="OK" >OK</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Baojili_User_Login">Baojili User Login</string>
    <string name="user_id_or_email">UserID atau Email</string>
    <string name="welcome">Welcome!</string>
    <string name="id_or_email_must_be_filled">ID/Email harus diisi</string>
    <string name="password_must_be_filled">Password harus diisi</string>
    <string name="repeat_password_must_be_filled">Ulangi Password harus diisi</string>

    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="info_stock">Info Stok</string>
    <string name="item_in">Barang Masuk</string>
    <string name="item_out">Barang Keluar</string>
    <string name="print_barcode">Cetak Barcode</string>
    <string name="product_list">Daftar Barang</string>
    <string name="user_list">Daftar Pengguna</string>
    <string name="location_list">Daftar Lokasi</string>
    <string name="logout">Logout</string>

    <string name="sign_out_ask">Keluar dari aplikasi?</string>

    <string name="sign_out">Keluar</string>
    <string name="cancel">Batal</string>
    <string name="stock_by_location">Stock Per Lokasi</string>
    <string name="stock_by_item">Stock Per Item</string>
    <string name="no_data">Tidak ada data</string>
    <string name="stock_total">Total Stock</string>
    <string name="my_profile">Profile Saya</string>
    <string name="change">Ubah</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="change_password">Ubah Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="password_has_been_changed">Password berhasil diubah.</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image">Ambil Gambar</string>
    <string name="type">Tipe</string>
    <string name="colon">:</string>
    <string name="price">Harga</string>
    <string name="cost">Biaya</string>
    <string name="stock">Stok</string>
    <string name="delete_item_x">Hapus item %1$s?</string>
    <string name="delete_user_x">Hapus user %1$s?</string>
    <string name="delete">Hapus</string>
    <string name="add">Tambah</string>
    <string name="code">Kode</string>
    <string name="size">Ukuran</string>
    <string name="production">Produksi</string>
    <string name="pasokan">Pasokan</string>
    <string name="description">Deskripsi</string>
    <string name="add_item">Tambah Barang</string>
    <string name="type_produksi_pasokan_must_be_selected">Tipe Produksi/Pasokan harus dipilih</string>
    <string name="type_pemindahan_penambahan_must_be_selected">Tipe Penambahan/Pemindahan harus dipilih</string>
    <string name="type_terjual_cacat_pemindahan_must_be_selected">Tipe Terjual/Cacat/Pemindahan harus dipilih</string>
    <string name="code_must_be_filled">Kode harus diisi</string>
    <string name="size_must_be_filled">Ukuran harus diisi</string>
    <string name="update_item">Ubah Barang</string>
    <string name="update_user">Ubah Pengguna</string>
    <string name="Rp">Rp&#160;</string>
    <string name="role">Role</string>
    <string name="add_user">Tambah Pengguna</string>
    <string name="manajer">Manajer</string>
    <string name="karyawan">Karyawan</string>
    <string name="username">Username</string>
    <string name="repeat_password">Ulangi Password</string>
    <string name="username_star">Username*</string>
    <string name="password_star">Password*</string>
    <string name="repeat_password_star">Ulangi Password*</string>
    <string name="code_star">Kode*</string>
    <string name="size_star">Ukuran*</string>
    <string name="role_must_be_selected">Role Manajer/Karyawan harus dipilih</string>
    <string name="username_must_be_filled">Username harus diisi</string>
    <string name="email_format_is_not_valid">Format email tidak valid</string>
    <string name="repeat_password_not_match">Ulangi Password tidak sesuai dengan password</string>
    <string name="confirm_password_not_match">Konfimasi Password tidak sesuai dengan password</string>
    <string name="name_must_be_filled">Nama harus diisi</string>
    <string name="name_star">Nama*</string>
    <string name="delete_location_x">Hapus Lokasi %1$s</string>
    <string name="add_location">Tambah Lokasi</string>
    <string name="location_name_star">Nama Lokasi*</string>
    <string name="pabrik">Pabrik</string>
    <string name="pemasok">Pemasok</string>
    <string name="gudang">Gudang</string>
    <string name="toko">Toko</string>
    <string name="address">Alamat</string>
    <string name="get_location_from_map">Ambil lokasi dari Peta</string>
    <string name="type_location_must_be_selected">Tipe Pabrik/Pemasok/Gudang/Toko harus dipilih</string>
    <string name="location_name_must_be_filled">Nama lokasi harus diisi</string>
    <string name="update_location">Ubah Lokasi</string>
    <string name="from_x">dari %1$s</string>
    <string name="delete_transaction_x">Hapus Transaksi %1$s</string>
    <string name="delete_transaction">Hapus Transaksi?</string>
    <string name="all_location">Semua Lokasi</string>
    <string name="add_item_in">Tambah Barang Masuk</string>
    <string name="penambahan">Penambahan</string>
    <string name="pemindahan">Pemindahan</string>
    <string name="target_location_star">Lokasi Tujuan*</string>
    <string name="source_location_star">Lokasi Asal*</string>
    <string name="item">Barang</string>
    <string name="quantity_star">Jumlah*</string>
    <string name="use_bar_code">Gunakan Barcode</string>
    <string name="quantity_must_be_filled">Jumlah harus diisi</string>
    <string name="quantity_must_greater_0">Jumlah harus lebih besar dari 0</string>
    <string name="update_transaction">Ubah Transaksi</string>
    <string name="update_item_in">Detail Transaksi Masuk</string>
    <string name="update_item_out">Detail Transaksi Keluar</string>
    <string name="this_action_cannot_be_undone">Aksi ini tidak dapat dikembalikan</string>
    <string name="to_x">ke %1$s</string>
    <string name="add_item_out">Input Barang Keluar</string>
    <string name="terjual">Terjual</string>
    <string name="cacat">Cacat</string>
    <string name="save">Simpan</string>
    <string name="search_printer">Pilih printer</string>
    <string name="print">Cetak</string>
    <string name="printer_settings">Setting</string>
    <string name="function_name_discover_printer">Mencari Printer</string>
    <string name="text_print_settings_title">Print Settings</string>
    <string name="text_copies_setting">Jumlah (Copies)</string>
    <string name="text_tape_cut_setting">Tape Cut</string>
    <string name="text_half_cut_setting">Half Cut</string>
    <string name="text_low_speed_setting">Kecepatan Rendah</string>
    <string name="text_density_setting">Tingkat presisi</string>
    <string name="text_description_print_settings_ok_button">OK</string>
    <string name="button_print_settings_ok">OK</string>
    <string name="radio_each">Each</string>
    <string name="radio_after">After</string>
    <string name="radio_none">None</string>
    <string name="toggle_text_on">ON</string>
    <string name="toggle_text_off">OFF</string>
    <string name="item_check">Cek Barang</string>
    <string name="make_sure_product_is_available_using_check">Pastikan barang tersedia dengan menekan \"Check Barang\"</string>
    <string name="jumlah_copy">Jumlah (Copy)</string>
    <string name="please_enable_location_feature">Aktifkan fitur lokasi untuk mendapatkan lokasi Anda saat ini</string>
    <string name="confirm_new_password">Konfirm Password Baru</string>
    <string name="confirm_password_must_be_filled">Konfirmasi Password harus diisi</string>
    <string name="updated">Diubah</string>
    <string name="created">Dibuat</string>
    <string name="search_keyword_not_found">Pencarian untuk \"<![CDATA[<b>%1$s</b>]]>\" tidak ditemukan.</string>
    <string name="search_item">Cari Barang</string>

</resources>
