<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:divider="@drawable/line_divider"
    android:showDividers="middle">
    <ScrollView
        android:id="@+id/vg_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_16">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="@dimen/xxlarge_icon_size"
                android:layout_height="@dimen/xxlarge_icon_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rect_stroke_gray"
                android:clickable="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/no_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_produksi_choice"
                    android:layout_width="@dimen/single_choice_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/padding_8"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@drawable/selector_rect_gray_selected_darker"
                    android:textColor="@color/selector_gray_selected_white"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_8"
                    android:paddingTop="@dimen/padding_8"
                    android:text="@string/production"
                    android:textSize="@dimen/font_14" />

                <TextView
                    android:id="@+id/tv_pasokan_choice"
                    android:layout_width="@dimen/single_choice_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/padding_8"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@drawable/selector_rect_gray_selected_darker"
                    android:textColor="@color/selector_gray_selected_white"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_8"
                    android:paddingTop="@dimen/padding_8"
                    android:text="@string/pasokan"
                    android:textSize="@dimen/font_14" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <com.combintech.baojili.view.AllCapsEditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code_star"
                    android:inputType="text"
                    android:maxLength="@integer/max_code_length"
                    android:textSize="@dimen/font_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <com.combintech.baojili.view.AllCapsEditText
                    android:id="@+id/etSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size_star"
                    android:inputType="text"
                    android:maxLength="@integer/max_size_length"
                    android:textSize="@dimen/font_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:textSize="@dimen/font_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <com.combintech.baojili.view.PrefixEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textSize="@dimen/font_16"
                    app:prefix="@string/Rp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <com.combintech.baojili.view.PrefixEditText
                    android:id="@+id/etCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost"
                    android:inputType="number"
                    android:textSize="@dimen/font_16"
                    app:prefix="@string/Rp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_8"
        android:layout_marginLeft="@dimen/padding_16"
        android:layout_marginRight="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_8"
        android:background="@color/bjBlue"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/bjWhite"
        android:textSize="@dimen/font_18" />
</LinearLayout>

