<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rect_white_stroke">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/font_18"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/change_password" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_16"
            android:gravity="center"
            android:hint="@string/old_password"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:layout_marginLeft="@dimen/padding_32"
            android:layout_marginRight="@dimen/padding_32"
            android:inputType="textPassword"
            android:textSize="@dimen/font_16"
            android:background="@drawable/rect_white_stroke"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_16"
            android:gravity="center"
            android:hint="@string/new_password"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:layout_marginLeft="@dimen/padding_32"
            android:layout_marginRight="@dimen/padding_32"
            android:inputType="textPassword"
            android:textSize="@dimen/font_16"
            android:background="@drawable/rect_white_stroke"/>

        <EditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_16"
            android:gravity="center"
            android:hint="@string/confirm_new_password"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:layout_marginLeft="@dimen/padding_32"
            android:layout_marginRight="@dimen/padding_32"
            android:inputType="textPassword"
            android:textSize="@dimen/font_16"
            android:background="@drawable/rect_white_stroke"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_divider"
            android:layout_marginTop="@dimen/padding_32"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/font_16"
                android:padding="@dimen/padding_12"
                android:background="@color/gray_solid_300"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_divider_vertical"/>
            <TextView
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_12"
                android:text="@string/change"
                android:textSize="@dimen/font_16"
                android:background="@color/gray_solid_300"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>